--- a/wp-content/themes/backtobasics/sass/site/footer/_footer.scss
+++ b/wp-content/themes/backtobasics/sass/site/footer/_footer.scss
@@ -34,7 +34,6 @@
   font-family: $font__tagline;
 
   @media screen and (min-width: $query__medium) {
-    text-align: right;
 
     span {
       display: block;
