--- a/wp-content/themes/backtobasics/sass/site/header/_header-menu.scss
+++ b/wp-content/themes/backtobasics/sass/site/header/_header-menu.scss
@@ -21,6 +21,7 @@
 
 			ul {
 				top: 0;
+                float: right;
 			}
 
 			li {
