--- a/wp-content/themes/backtobasics/style.css
+++ b/wp-content/themes/backtobasics/style.css
@@ -1210,6 +1210,7 @@ a:hover, a:active {
 
 .main-navigation ul ul ul {
 	top: 0;
+	float: right;
 }
 
 .main-navigation ul ul li {
@@ -1821,9 +1822,6 @@ button.dropdown-toggle {
 }
 
 @media screen and (min-width: 900px) {
-	.site-info {
-		text-align: right;
-	}
 	.site-info span {
 		display: block;
 	}
@@ -1942,7 +1940,7 @@ button.dropdown-toggle {
 	}
 }
 
-.footer__navigation {
+.footer_navigation {
 	display: block;
 	font-family: "Wellfleet", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, cursive;
 	font-size: 100%;
@@ -1951,7 +1949,7 @@ button.dropdown-toggle {
 	padding-top: 0;
 }
 
-.footer__navigation ul {
+.footer_navigation ul {
 	display: none;
 	list-style: none;
 	margin: 0;
@@ -1959,39 +1957,39 @@ button.dropdown-toggle {
 	padding-left: 0;
 }
 
-.footer__navigation ul ul {
+.footer_navigation ul ul {
 	display: none;
 	top: 1.5em;
 	z-index: 99999;
 }
 
-.footer__navigation ul ul ul {
+.footer_navigation ul ul ul {
 	top: 0;
 }
 
-.footer__navigation ul ul li {
+.footer_navigation ul ul li {
 	padding-left: 1em;
 }
 
-.footer__navigation ul ul li:hover > ul,
-.footer__navigation ul ul li.focus > ul {
+.footer_navigation ul ul li:hover > ul,
+.footer_navigation ul ul li.focus > ul {
 	left: 100%;
 }
 
-.footer__navigation ul ul a {
+.footer_navigation ul ul a {
 	width: 20px;
 }
 
-.footer__navigation ul li:hover > ul,
-.footer__navigation ul li.focus > ul {
+.footer_navigation ul li:hover > ul,
+.footer_navigation ul li.focus > ul {
 	left: auto;
 }
 
-.footer__navigation li {
+.footer_navigation li {
 	position: relative;
 }
 
-.footer__navigation a {
+.footer_navigation a {
 	display: inline-block;
 	width: 100%;
 	padding: .5em 1em .5em 0;
@@ -1999,23 +1997,23 @@ button.dropdown-toggle {
 	color: #ffffff;
 }
 
-.footer__navigation a:hover,
-.footer__navigation a:focus {
+.footer_navigation a:hover,
+.footer_navigation a:focus {
 	color: #1e8cbe;
 }
 
-.footer__navigation .menu-item-has-children,
-.footer__navigation .page-item-has-children {
+.footer_navigation .menu-item-has-children,
+.footer_navigation .page-item-has-children {
 	min-width: 120px;
 }
 
-.footer__navigation .menu-item-has-children > a,
-.footer__navigation .page_item_has_children > a {
+.footer_navigation .menu-item-has-children > a,
+.footer_navigation .page_item_has_children > a {
 	padding-right: 2em;
 }
 
 @media screen and (min-width: 900px) {
-	.footer__navigation ul {
+	.footer_navigation ul {
 		-webkit-box-pack: end;
 		    -ms-flex-pack: end;
 		        justify-content: flex-end;
